--- a/desafios/projeto_cordel/style.css
+++ b/desafios/projeto_cordel/style.css
@@ -1,6 +1,17 @@
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 html, body{
     min-height: 100vh;
     background-color: rgb(172, 172, 172);
+    font-family: var(--fonte1);
 }
 
 *{
@@ -17,6 +28,8 @@ header{
 
 h1{
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p{
@@ -35,14 +48,11 @@ a:hover{
 
 section{
     padding-top: 10vh;
-    padding-bottom: 1px;
-}
-
-section p{
+    padding-bottom: 10vh;
     line-height: 2em;
-    margin-left: 30px;
-    margin-bottom: 10vh;
-   
+    padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -58,7 +68,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.5);
-    max-width: 500px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
