--- a/desafios/projeto_cordel/style.css
+++ b/desafios/projeto_cordel/style.css
@@ -64,12 +64,30 @@ section.normal{
 section.imagem{
     background-color: rgb(54, 54, 54);
     color: white;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.437);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img01{
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url('imagens/background002.jpg');
+}
+
+section > p{
+    padding-bottom: 1em;
 }
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+    background-size: cover;
 }
 
 footer{
